--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #------------------------------------------------\u670d\u52a1\u5668\u914d\u7f6e---------------------------------------
 #\u670d\u52a1\u7aef\u53e3
-server.port=8081
+server.port=8083
 #\u5982\u679c\u7528\u5206\u5e03\u5f0f\u670d\u52a1\u603b\u7ebf\uff0c\u5219\u9700\u5c06management.port\u6ce8\u91ca\u6389
 #management.port=7002
 #\u5fae\u670d\u52a1\u662f\u5426\u4e3a\u5f00\u53d1\u6a21\u5f0f\uff0c\u9ed8\u8ba4\u4e3atrue
@@ -34,7 +34,7 @@ jasypt.encryptor.password=nrmZtkF7T0kjG/VodDvBw93Ct8EgjCA+
 #------------------------------------------------\u6570\u636e\u6e90\u914d\u7f6e----------------------------------------
 #\u6570\u636e\u6e90url\u5730\u5740\uff1a
 #\u793a\u4f8b\uff1aMySQL:jdbc:mysql://[ip]:[port]/[database]?serverTimezone=GMT%2b8;Oracle:jdbc:oracle:thin:@[ip]:[port]:[orcl];postgreSQL:jdbc:postgresql://[ip]:[port]/[database]
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2b8
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2b8&useSSL=false&useUnicode=true&characterEncoding=UTF-8
 #\u6570\u636e\u6e90\u7528\u6237\u540d
 spring.datasource.username=root
 #\u6570\u636e\u6e90\u5bc6\u7801
@@ -69,7 +69,7 @@ spring.datasource.minEvictableIdelTimeMillis=300000
 #\u914d\u7f6e\u6570\u636e\u5e93\u65b9\u8a00 mysql,oracle,postgreSQL\u4e0d\u7528\u914d\u7f6e\u65b9\u8a00\uff0c\u8fbe\u68a6\u91d1\u4ed3\u9700\u8981\u914d\u7f6e\u65b9\u8a00\uff08\u8fbe\u68a6\uff1aorg.hibernate.dialect.DmDialect;\u91d1\u4ed3\uff1aorg.hibernate.dialect.KingbaseDialect\uff09
 #spring.jpa.properties.hibernate.dialect=
 #\u8bbe\u7f6e\u662f\u5426\u5728\u6253\u5370sql\uff0c\u9ed8\u8ba4\u4e3afalse
-#spring.jpa.show-sql= true
+spring.jpa.show-sql= true
 
 #------------------------------------------------\u7f13\u5b58\u914d\u7f6e-----------------------------------------
 #redis\u914d\u7f6e
