llb-20201202-1-新增排序方法 修改图片上传方法

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -151,3 +151,11 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicExtractory=TRACE
 #\u8bbe\u7f6ecom.itmuch.youran.persistence\u5305\u4e0b\u6240\u6709\u7c7b\u7684\u65e5\u5fd7\u7ea7\u522b\uff0c\u5efa\u8bae\u4e3aERROR
 logging.level.com.itmuch.youran.persistence=ERROR
+
+
+
+#------------------------------------------------\u5176\u4ed6\u914d\u7f6e-----------------------------------------
+picture.url=http://localhost:8051/img/
+picture.path=d:/pictures
+
+
