--- a/gradle.properties
+++ b/gradle.properties
@@ -13,10 +13,10 @@ config = false
 zipkin = false
 
 #Session(true:\u542f\u7528  false:\u505c\u7528)\uff0c\u542f\u7528session\u65f6\uff0c\u4f9d\u8d56redis\uff0c\u9700\u8bb2redis\u8bbe\u7f6e\u4e3a\u542f\u7528\u72b6\u6001
-session = false
+session = true
 
 #Redis(true:\u542f\u7528  false:\u505c\u7528)
-redis = false
+redis = true
 
 #Hystrix\u76d1\u63a7(true:\u542f\u7528  false:\u505c\u7528)
 hystrix = false
