--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,7 +81,7 @@ spring.redis.host=127.0.0.1
 #redis\u670d\u52a1\u5668\u8fde\u63a5\u7aef\u53e3\u53f7
 spring.redis.port=6379
 #redis\u670d\u52a1\u5668\u8fde\u63a5\u5bc6\u7801\uff0c\u9ed8\u8ba4\u4e3a\u7a7a
-spring.redis.password=nrmZtkF7T0kjG/VodDvBw93Ct8EgjCA+
+#spring.redis.password=nrmZtkF7T0kjG/VodDvBw93Ct8EgjCA+
 #redis\u8fde\u63a5\u6c60\u6700\u5927\u6d3b\u8dc3\u8fde\u63a5\u6570
 spring.redis.pool.max-active=8
 #redis\u8fde\u63a5\u6c60\u6700\u5927\u963b\u585e\u7b49\u5f85\u65f6\u95f4
