--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -158,4 +158,7 @@ logging.level.com.itmuch.youran.persistence=ERROR
 picture.url=http://localhost:8051/img/
 picture.path=d:/pictures
 
-
+#spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-request-size=10MB
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
