--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,14 +34,15 @@ jasypt.encryptor.password=nrmZtkF7T0kjG/VodDvBw93Ct8EgjCA+
 #------------------------------------------------\u6570\u636e\u6e90\u914d\u7f6e----------------------------------------
 #\u6570\u636e\u6e90url\u5730\u5740\uff1a
 #\u793a\u4f8b\uff1aMySQL:jdbc:mysql://[ip]:[port]/[database]?serverTimezone=GMT%2b8;Oracle:jdbc:oracle:thin:@[ip]:[port]:[orcl];postgreSQL:jdbc:postgresql://[ip]:[port]/[database]
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2b8&useSSL=false&useUnicode=true&characterEncoding=UTF-8
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2b8&useSSL=false&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:oracle:thin:@DESKTOP-RTRNTQ6:1521:orcl
 #\u6570\u636e\u6e90\u7528\u6237\u540d
-spring.datasource.username=root
+spring.datasource.username=localorcl
 #\u6570\u636e\u6e90\u5bc6\u7801
-spring.datasource.password=ENC(gQd/R26yXWseE8tughMq/Q==)
+spring.datasource.password=ENC(bOp0fG5fTiQ8J+hzy56wqhPgytfmTN17)
 #\u6570\u636e\u6e90\u9a71\u52a8
 #\u793a\u4f8b\uff1a
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #\u8fde\u63a5\u6c60\u7684\u6700\u5927\u503c\uff0c\u540c\u4e00\u65f6\u95f4\u53ef\u4ee5\u4ece\u6c60\u5206\u914d\u7684\u6700\u591a\u8fde\u63a5\u6570\u91cf\uff0c0\u65f6\u65e0\u9650\u5236\uff0c\u9ed8\u8ba4\u8bbe\u7f6e20
 spring.datasource.maxActive=20
 #\u8fde\u63a5\u521d\u59cb\u503c\uff0c\u8fde\u63a5\u6c60\u542f\u52a8\u65f6\u521b\u5efa\u7684\u8fde\u63a5\u6570\u91cf\u7684\u521d\u59cb\u503c\uff0c\u9ed8\u8ba4\u8bbe\u7f6e\u4e3a1
