--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,27 +1,27 @@
-#------------------------------------------------配置管理服务配置-----------------------------------------
-#要读取的配置文件application属性
+#------------------------------------------------\u914d\u7f6e\u7ba1\u7406\u670d\u52a1\u914d\u7f6e-----------------------------------------
+#\u8981\u8bfb\u53d6\u7684\u914d\u7f6e\u6587\u4ef6application\u5c5e\u6027
 #spring.cloud.config.name=
-#对应的git分支(默认为master分支，根据git库实际情况填写)
+#\u5bf9\u5e94\u7684git\u5206\u652f(\u9ed8\u8ba4\u4e3amaster\u5206\u652f\uff0c\u6839\u636egit\u5e93\u5b9e\u9645\u60c5\u51b5\u586b\u5199)
 #spring.cloud.config.label=
-#配置中心服务地址
+#\u914d\u7f6e\u4e2d\u5fc3\u670d\u52a1\u5730\u5740
 #spring.cloud.config.uri=
-#要读取的配置文件profile属性
+#\u8981\u8bfb\u53d6\u7684\u914d\u7f6e\u6587\u4ef6profile\u5c5e\u6027
 #spring.cloud.config.profile=test
-#读取一个或者多个配置文件(注意被读取的配置文件中的key必须唯一)
+#\u8bfb\u53d6\u4e00\u4e2a\u6216\u8005\u591a\u4e2a\u914d\u7f6e\u6587\u4ef6(\u6ce8\u610f\u88ab\u8bfb\u53d6\u7684\u914d\u7f6e\u6587\u4ef6\u4e2d\u7684key\u5fc5\u987b\u552f\u4e00)
 #spring.profiles.active=
 
-#配置服务为集群时，请打开以下两项设置，并将“microapp-config”修改为实际环境配置服务名称
+#\u914d\u7f6e\u670d\u52a1\u4e3a\u96c6\u7fa4\u65f6\uff0c\u8bf7\u6253\u5f00\u4ee5\u4e0b\u4e24\u9879\u8bbe\u7f6e\uff0c\u5e76\u5c06\u201cmicroapp-config\u201d\u4fee\u6539\u4e3a\u5b9e\u9645\u73af\u5883\u914d\u7f6e\u670d\u52a1\u540d\u79f0
 #spring.cloud.config.discovery.enabled=true
 #spring.cloud.config.discovery.serviceId=microapp-config
 
-#------------------------------------------------配置RabbitMQ属性信息---------------------------------------
-#rabbitmq服务器地址
-#spring.rabbitmq.host=
-#rabbitmq端口号
-#spring.rabbitmq.port=
-#rabbit用户名
-#spring.rabbitmq.username=
-#rabbitmq密码
-#spring.rabbitmq.password=
+#------------------------------------------------\u914d\u7f6eRabbitMQ\u5c5e\u6027\u4fe1\u606f---------------------------------------
+#rabbitmq\u670d\u52a1\u5668\u5730\u5740
+#spring.rabbitmq.host=127.0.0.1
+#rabbitmq\u7aef\u53e3\u53f7
+#spring.rabbitmq.port=15672
+#rabbit\u7528\u6237\u540d
+#spring.rabbitmq.username=guest
+#rabbitmq\u5bc6\u7801
+#spring.rabbitmq.password=guest
 
 
